src/test/ui/issues/issue-38160.stderr
error: compilation successful
  --> $DIR/issue-38160.rs:21:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

